# vivid-3d

./: .gitignore  CMakeLists.txt  README.md  vivid-package.json
graphs/: 3d_boolean_demo.json  3d_curl_noise_demo.json  3d_environment_demo.json  3d_fft_scatter_demo.json  3d_fog_fake_post_demo.json  3d_fog_true_demo.json  3d_hello_world_demo.json  3d_instancer_demo.json  3d_materials_demo.json  3d_mesh_import_demo.json  3d_particles_compute_beginner_demo.json  3d_particles_demo.json  3d_pbr_oxidized_metal_demo.json  3d_pbr_streaky_metal_demo.json  3d_pbr_worn_rusted_demo.json  3d_postprocess_demo.json  3d_sdf_demo.json  3d_shadow_focus_demo.json  3d_shapes_demo.json  3d_transform_demo.json
include/operator_api/: gpu_3d.h  thumbnail_3d.h
operators/control/orbit_camera/: orbit_camera.cpp
operators/gpu/boolean3d/: boolean3d.cpp
operators/gpu/box/: box.cpp
operators/gpu/deformer/: deformer.cpp
operators/gpu/dof3d/: dof3d.cpp
operators/gpu/environment3d/: environment3d.cpp
operators/gpu/grid/: grid.cpp
operators/gpu/instanced_render/: instanced_render.cpp
operators/gpu/instancer3d/: instancer3d.cpp
operators/gpu/light3d/: light3d.cpp
operators/gpu/material3d/: material3d.cpp
operators/gpu/mesh_import/: mesh_import.cpp
operators/gpu/particles3d/: particles3d.cpp
operators/gpu/point_cloud/: point_cloud.cpp
operators/gpu/render_3d/: render_3d.cpp
operators/gpu/scene_merge/: scene_merge.cpp
operators/gpu/sdf3d/: sdf3d.cpp
operators/gpu/shape3d/: shape3d.cpp
operators/gpu/sphere/: sphere.cpp
operators/gpu/ssao3d/: ssao3d.cpp
operators/gpu/transform3d/: transform3d.cpp
tests/: test_boolean3d.cpp  test_deformer.cpp  test_depth_output.cpp  test_dof3d.cpp  test_environment3d.cpp  test_gpu_3d.cpp  test_instancer3d.cpp  test_material3d.cpp  test_mesh_import.cpp  test_particles3d.cpp  test_render_3d.cpp  test_scene3d.cpp  test_sdf3d.cpp  test_shadow3d.cpp  test_shape3d.cpp  test_ssao3d.cpp
